[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lean_morphik_core"
version = "0.1.0"
description = "Surgically extracted and refactored Morphik modules for ingestion, embedding, and RAG orchestration."
readme = "README.md"
requires-python = ">=3.9, <3.13" # Allow Python 3.12.x, updated to meet numpy requirements
license = {text = "MIT"}
authors = [
  {name = "AI Agent Jules", email = "jules@example.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "filetype~=1.2.0",
    "unstructured[local-inference]>=0.13.0,<0.15.0", # Attempting update for Py3.12 compatibility
    "Pillow~=10.2.0", # Downgraded to be compatible with unstructured~=0.12.6
    "opencv-python-headless~=4.9.0",
    "assemblyai~=0.20.0",
    "torch~=2.2.0", # Downgraded to be compatible with unstructured~=0.12.6
    "transformers~=4.37.1", # Downgraded to be compatible with unstructured~=0.12.6
    "numpy~=1.26.4", # CRITICAL: NumPy 2.0 has breaking changes
    "sentence-transformers~=2.7.0",
    "pinecone-client~=4.1.1",
    "neo4j~=5.20.0",
    "litellm~=1.37.1",
    "tiktoken~=0.7.0",
    "aiohttp~=3.9.5",
    "python-dotenv~=1.0.1",
    "tenacity~=8.3.0", # Added tenacity
    # Ensure colpali-engine is NOT listed here
]

[project.optional-dependencies]
test = [
    "pytest~=8.2.2",
    "pytest-asyncio~=0.23.7",
    "pytest-mock~=3.14.0",
]
dev = [
    "lean_morphik_core[test]",
    "uv >= 0.1.0", # Added uv for locking dependencies
]

[project.urls]
Homepage = "https://github.com/example/lean_morphik_core"
Repository = "https://github.com/example/lean_morphik_core"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*"]
